# SNS-Classification-Model

./: .gitignore  0.26.0  README.md  pyproject.toml
src/: 1st_predict_category.py  DB_connection.py  labeling_main.py  main.py  model_inference.py
tests/: 2nd_labeling_using_open-source-LLM.ipynb  additional_data_preprocessing.ipynb  additional_fine-tuning-data_preprocessing.ipynb  augmented_df.csv  basic_fine_tuning_model_test.ipynb  create_additional_fine-tuning-data_preprocessing.ipynb  create_fine-tuning-data_and_preprocessing.ipynb  data_preprocessing.ipynb  fine_tuning.ipynb  fine_tuning_another_model.ipynb  module_test.ipynb  multi_columns_fine_tuning.ipynb  multi_columns_labeling.ipynb
