[project]
name = "sns-categorizer"
version = "0.1.0"
description = ""
authors = [
    {name = "SOMMHEO",email = "hsm8506@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "jupyterlab (>=4.4.5,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "kobert-transformers (>=0.6.0,<0.7.0)",
    "gluonnlp (>=0.10.0,<0.11.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "konlpy (>=0.6.0,<0.7.0)",
    "openai (==0.28)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "protobuf (>=6.31.1,<7.0.0)",
    "bitsandbytes (>=0.46.1,<0.47.0)",
    "hf-xet (>=1.1.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
